--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,33 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "UX metrics system"
+excerpt: "Designing a scalable metrics system that evaluates UX across 200+ cloud products <br/><img src='/images/500x300.png'>"
 collection: portfolio
 ---
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+**Project Overview**
+
+UX evaluation with software products is an essential aspect of supporting a product lifecycle and the success of the product. Generally, UX evaluation has two purposes: (i) evaluate if the product meets users' needs and goals; (ii) provide product teams and designers with insights on which aspects of the product need improvement for better UX. At Huawei, I led and developed a two-tier framework that evaluates UX across 200+ Huawei Cloud products.
+
+**Role and Time required**
+
+Role: Lead UX Researcher
+
+Time: 6 months
+
+**Research Approach**
+
+Step 1: Understand the current landscape
+- Identify what Huawei currently used for evaluating UX in different cloud product
+- Identify the commonality between different cloud products, so that the chosen metrics can be scalable across products
+
+Step 2: Determine a two-tired UX metrics system
+- Identify the correlation between metrics. Metrics can be classified into two types: (i) UX signals that indicate that the UX of a product is poor; (ii) UX diagnostics that indicate what may cause poor UX
+- Collborate with product team to test this UX metrics system
+
+Step 3: Testing the UX metrics with a product (Case study)
+- Please note that the details of the case study is confidential. Please contact Angeline (angelinetsui@gmail.com) for further information
+- Summary: The case study has shown how the two-tiered UX system identified why some metrics were pointing to different directions and how further UX research (e.g., behavioral log analysis, user ticket text analysis, usability testing) can help the product team to identify what went wrong and how to design a better product
+
+Step 4: Advocate the adoption of UX insight
+- Write internal blog to educate how different product teams use the two-tiered system to evaluate UX over time
+- Write and present a paper that provides details of how to design a two-tiered system at an international HCI conference, establishing Huawei's thought leadeship in UX industry
